--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -38,7 +38,7 @@
 					<blockquote>
 						"That monster custom, who all sense doth eat
 						Of habit’s devil," <abbr title="et cetera">&c.</abbr> not in Folio
-
+						&nbsp;
 						"What a falling off was there !
 						From me, whose love was of that dignity
 						That it went hand in hand even with the vow
