--- a/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
+++ b/assets/02-css/02-cssBeginner/02-css_selectors_level1.html
@@ -503,18 +503,10 @@
 		</p>
 		<div class="uk_gist_code_box mt_ms" data-tit="Attribute Selector" data-ex="attribute_selector">
 			<textarea readonly="readonly">
-				div[attribute] {
-					/* style 작성 */
-				}
-				[attribute='value'] {
-					/* style 작성 */
-				}
-				[attribute~='bar'] {
-					/* style 작성 */
-				}
-				[attribute|='en'] {
-					/* style 작성 */
-				}
+				div[attribute] { … }
+				[attribute='value'] { … }
+				[attribute~='bar'] { … }
+				[attribute|='en'] { … }
 			</textarea>
 		</div>
 
@@ -591,21 +583,11 @@
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="Pseudo-classes">
 				<textarea readonly="readonly">
-					a:link {
-						/* style 작성 */
-					}
-					a:visited {
-						/* style 작성 */
-					}
-					a:active {
-						/* style 작성 */
-					}
-					a:hover {
-						/* style 작성 */
-					}
-					a:focus {
-						/* style 작성 */
-					}
+					a:link { … }
+					a:visited { … }
+					a:active { … }
+					a:hover { … }
+					a:focus { … }
 				</textarea>
 			</div>
 			<div class="mt_m">
