--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -41,9 +41,9 @@
 			<div class="ol_lst indent mt_sm">
 				<ol>
 					<!-- em 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>em 단위</strong>
-						<blockquote class="uk_note mt_s" role="note">
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">em 단위</h4>
+						<blockquote class="uk_note mt_ms" role="note">
 							<h4 class="sound_only">요약 설명</h4>
 							<p>
 								em은 상대적인 크기를 지니는 단위로써 요소에 저정하는 글자 크기 단위를 설정할 수 있습니다.<br>
@@ -81,9 +81,9 @@
 					</li>
 
 					<!-- rem 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>rem 단위</strong>
-						<blockquote class="uk_note mt_s" role="note">
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">rem 단위</h4>
+						<blockquote class="uk_note mt_ms" role="note">
 							<h4 class="sound_only">요약 설명</h4>
 							<p>
 								CSS 3의 폰트 크기 값으로 새로 등장한 rem은 'root em'이라는 뜻으로, HTML 문서의 root 요소인 <code>&lt;html&gt;</code> 요소를 가리키며,
@@ -125,8 +125,8 @@
 					</li>
 
 					<!-- ex 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>ex 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">ex 단위</h4>
 						<div class="line_code mt_ms">
 							<p>요소 font의 x 높이를 나타냅니다. &quot;x&quot;문자를 가진 글꼴에서는 보통 소문자 높이와 같습니다. 많은 글꼴에서 1ex ≈ 0.5em입니다.</p>
 							<p>현재 글꼴의 x 높이에 상대적인 값입니다(드물게 사용되며, x 높이란 소문자 x의 높이를 지칭).</p>
@@ -134,8 +134,8 @@
 					</li>
 
 					<!-- ch 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>ch 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">ch 단위</h4>
 						<div class="line_code mt_ms">
 							<p>요소 font의 문자 &quot;0&quot;(영, 유니코드 U+0030)의 너비를 나타냅니다.</p>
 							<p>&quot;0&quot;의 너비에 상대적인 값입니다.</p>
@@ -151,8 +151,8 @@
 			<div class="ol_lst indent mt_sm">
 				<ol>
 					<!-- vw 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>vw 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">vw 단위</h4>
 						<div class="line_code mt_ms">
 							<p>뷰포트의 초기 컨테이닝 블록 너비 1%와 같습니다.</p>
 							<p>사용자 창 너비의 1%에 비례합니다.</p>
@@ -160,8 +160,8 @@
 					</li>
 
 					<!-- vh 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>vh 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">vh 단위</h4>
 						<div class="line_code mt_ms">
 							<p>뷰포트의 초기 컨테이닝 블록 높이 1%와 같습니다.</p>
 							<p>사용자 창 높이의 1%에 비례합니다.</p>
@@ -169,8 +169,8 @@
 					</li>
 
 					<!-- vmin 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>vmin 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">vmin 단위</h4>
 						<div class="line_code mt_ms">
 							<p>vw와 vh 중 작은 것과 같습니다.</p>
 							<p>사용자 창 높이와 너비 사이 최소값의 1%에 비례합니다.</p>
@@ -178,8 +178,8 @@
 					</li>
 
 					<!-- vmax 단위 -->
-					<li class="line_code font14 mt_m">
-						<strong>vmax 단위</strong>
+					<li class="line_code tit_h4 before_blue mt_m">
+						<h4 class="t_blue">vmax 단위</h4>
 						<div class="line_code mt_ms">
 							<p>vw와 vh 중 큰 것과 같습니다.</p>
 							<p>사용자 창의 높이와 너비 사이 최대값의 1%에 비례합니다.</p>
