--- a/assets/02-css/02-cssBeginner/05-css_text.html
+++ b/assets/02-css/02-cssBeginner/05-css_text.html
@@ -210,6 +210,14 @@
 				}
 			</textarea>
 		</div>
+		<div class="ol_lst indent mt_ms">
+			<ol>
+				<li><strong class="t_black">normal</strong> : 기본값으로 CJK 문자는 글자(음절) 기준으로, CJK 이외의 문자는 단어 또는 공백(띄어쓰기, 하이픈'-') 기준으로 줄바꿈합니다.</li>
+				<li><strong class="t_black">keep-all</strong> : 공백(띄어쓰기, 하이픈’-‘, 그 외 기호) 기준으로 줄바꿈합니다.(CJK에만 적용됨)</li>
+				<li><strong class="t_black">break-all</strong> : 글자(음절) 기준으로 줄바꿈합니다.</li>
+				<li><strong class="t_black">break-word</strong> : 단어 기준으로 줄바꿈합니다.(IE에서는 지원 안 함)</li>
+			</ol>
+		</div>
 		<blockquote class="uk_note mt_m" role="note">
 			<h2 class="sound_only">요약 설명</h2>
 			<p class="reference">
@@ -219,14 +227,6 @@
 				결과적으로 그러한 텍스트의 중단점 수행 기회를 식별하기 위해서는 어휘 자원이 필요합니다.
 			</p>
 		</blockquote>
-		<div class="ol_lst indent mt_m">
-			<ol>
-				<li><strong class="t_black">normal</strong> : 기본값으로 CJK 문자는 글자(음절) 기준으로, CJK 이외의 문자는 단어 또는 공백(띄어쓰기, 하이픈'-') 기준으로 줄바꿈합니다.</li>
-				<li><strong class="t_black">keep-all</strong> : 공백(띄어쓰기, 하이픈’-‘, 그 외 기호) 기준으로 줄바꿈합니다.(CJK에만 적용됨)</li>
-				<li><strong class="t_black">break-all</strong> : 글자(음절) 기준으로 줄바꿈합니다.</li>
-				<li><strong class="t_black">break-word</strong> : 단어 기준으로 줄바꿈합니다.(IE에서는 지원 안 함)</li>
-			</ol>
-		</div>
 		<div class="view_editor edit_code mt_m" data-target="css/step01/2.5.text/2.5.word-break.html">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
