--- a/assets/02-css/03-cssMiddleclass/05-css_ir.html
+++ b/assets/02-css/03-cssMiddleclass/05-css_ir.html
@@ -36,7 +36,7 @@
 
 	<section class="view_editor edit_code mt_xl" data-target="css/step02/3.5.ir/3.5.ir.html">
 		<h3 class="ve_tit">위 Sprite Image를 사용하여 CSS IR(Image Replacement) 기법으로 활용한 방법입니다.</h3>
-		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent mt_m" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
