--- a/assets/02-css/03-cssMiddleclass/08-css_fontface.html
+++ b/assets/02-css/03-cssMiddleclass/08-css_fontface.html
@@ -177,6 +177,24 @@
 		<!-- 3.8.2. CSS3 @font-face 규칙 속성 -->
 		<section class="txt_ex indent mt_xxl">
 			<h2 class="ml_mn">3.8.2. CSS3 @font-face 규칙 속성</h2>
+			<div class="uk_gist_code_box mt_ms" data-tit="@font-face">
+				<textarea readonly="readonly">
+					/* 아래 속성을 모두 적용 한 예제 */
+					@font-face {
+						font-family: 'MyWebFont';
+						src: url('webfont.eot'); /* IE9 Compat Modes */
+						src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+							 url('webfont.woff2') format('woff2'), /* Super Modern Browsers */
+							 url('webfont.woff') format('woff'), /* Pretty Modern Browsers */
+							 url('webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+							 url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+						font-weight: normal;
+						font-stretch : normal;
+						font-style : normal;
+						unicode-range: U+d3bf-d3c7, U+d3ca-d3cf, U+d3d1-d3eb, U+d3ee-d3ef, U+d3f1-d3f3, U+d3f5-d3fb, U+d3fd-d400, U+d402-d45b, U+d45d-d463;
+					}
+				</textarea>
+			</div>
 
 			<!-- font-family -->
 			<article class="indent mt_l">
@@ -184,6 +202,13 @@
 				<p class="mt_s">
 					필수적이며, 글꼴의 이름을 설정합니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-family]">
+					<textarea readonly="readonly">
+						@font-face {
+							font-family: '적용할 폰트 이름 지정';
+						}
+					</textarea>
+				</div>
 			</article>
 
 			<!-- src -->
@@ -193,6 +218,13 @@
 					필수적이며, 글꼴 파일의 주소를 설정합니다.<br>
 					권장은 항상 글꼴 URL에 소문자를 사용해야 하며. 대문자로 사용할 경우 IE에서 예기치 않은 결과를 줄 수 있습니다.
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [src]">
+					<textarea readonly="readonly">
+						@font-face {
+							src: url('적용할 폰트 경로/폰트명') format('폰트 포멧');
+						}
+					</textarea>
+				</div>
 			</article>
 
 			<!-- font-weight -->
@@ -200,8 +232,14 @@
 				<h3 class="ml_mn t_blue">font-weight</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 굵기를 설정합니다. 기본값은 "normal"입니다.<br>
-					<code>font-weight : normal | bold | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-weight]">
+					<textarea readonly="readonly">
+						@font-face {
+							font-weight: normal | bold | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900;
+						}
+					</textarea>
+				</div>
 			</article>
 
 			<!-- font-stretch -->
@@ -209,8 +247,14 @@
 				<h3 class="ml_mn t_blue">font-stretch</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 크기가 늘어나는 방법을 설정합니다. 기본값은 "normal"입니다.<br>
-					<code>font-stretch : normal | condensed | ultra-condensed | extra-condensed | semi-condensed | expanded | semi-expanded | extra-expanded | ultra-expanded</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-stretch]">
+					<textarea readonly="readonly">
+						@font-face {
+							font-stretch : normal | condensed | ultra-condensed | extra-condensed | semi-condensed | expanded | semi-expanded | extra-expanded | ultra-expanded;
+						}
+					</textarea>
+				</div>
 			</article>
 
 			<!-- font-style -->
@@ -218,30 +262,58 @@
 				<h3 class="ml_mn t_blue">font-style</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 스타일을 설정합니다. 기본값은 "normal"입니다.<br>
-					<code>font-style : normal | italic | oblique</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-style]">
+					<textarea readonly="readonly">
+						@font-face {
+							font-style : normal | italic | oblique;
+						}
+					</textarea>
+				</div>
 			</article>
 
 			<!-- unicode-range -->
 			<article class="indent mt_l">
 				<h3 class="ml_mn t_blue">unicode-range</h3>
 				<p class="mt_s">
-					선택적이며, 글꼴이 지원하는 유니코드 문자의 범위를 설정합니다. 기본값은 "U+0-10FFFF"입니다.<br>
+					선택적이며, 글꼴이 지원하는 유니코드 문자의 범위를 설정합니다. 기본값은 <code>U+0-10FFFF</code>입니다.<br>
 					유니코드로 지정한 글자에만 웹 폰트를 적용하는 속성입니다.<br>
 					예를 들어 영어, 그리스어 및 일본어에 대해 별도의 글꼴 리소스를 제공 할 수 있습니다.
 				</p>
-				<p class="mt_ms">
+				<p class="mt_s">
 					영어 버전의 페이지를 보는 사용자의 경우 그리스어 및 일본어 글꼴의 글꼴 리소스를 다운로드할 필요가 없음으로 대역폭이 절약됩니다.<br>
 					모든 유니코드 문자 코드 또는 범위는 허용 가능한 unicode-range 값입니다. 유니 코드 포인트 앞에는 U+문자 코드를 구성하는 최대 6개의 문자가 옵니다.<br>
 					이 형식을 따르지 않는 점 또는 범위는 유효하지 않은 것으로 간주하며 속성이 무시됩니다.<br>
 					수많은 유니 코드 옵션이 있는데 기본 라틴어 (0020—007F)는 영어 사이트에서 가장 일반적인 범위 일 수 있지만
 					<span class="reference mt_l"><a href="https://unicode-table.com/en/" target="_blank" title="새창열림">unicode-table.com</a></span> 에서 사용 가능한 유니코드를 참조햐여 사용할 수 있습니다.
 				</p>
-				<div class="view_editor ex_code mt_m" data-target="css/step02/3.8.font-face/3.8.font-face-unicode-range.html">
-					<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-						<div class="code_wrap"><textarea></textarea></div>
-					</div>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [unicode-range]">
+					<textarea readonly="readonly">
+						@font-face {
+							unicode-range:
+								/* 영문 */
+								U+0020-U+0020, U+0041-U+005A, U+0061-U+007A,
+								/* 숫자 */
+								U+0030-U+0039, U+002E-U+002E,
+								/* 한글 */
+								U+0020-U+007E, U+1100-U+11F9, U+3000-U+303F, U+3131-U+318E, U+327F-U+327F, U+AC00-U+D7A3, U+FF01-U+FF60,
+								/* 라틴 */
+								U+0020-U+002F, U+0030-U+0039, U+003A-U+0040, U+0041-U+005A, U+005B-U+0060, U+0061-U+007A, U+007B-U+007E;
+						}
+
+						unicode-range: U+26;                /* 단일 문자(single codepoint) */
+						unicode-range: U+0-7F;
+						unicode-range: U+0025-00FF;         /* 문자 범위(codepoint range) */
+						unicode-range: U+4??;               /* wildcard range */
+						unicode-range: U+0025-00FF, U+4??;  /* multiple values */
+						/*
+						와일드 카드 범위는 유니코드 범위 중 복잡합니다.
+						각각 ?은 값이 일치하는 와일드 카드를 나타냅니다.
+						?로 시작 하는 문자 코드는 0을 의미하므로 최대 6개의 총 문자를 허용하는 유니코드에도 불구하고 최대 5개의 물음표 문자를 사용할 수 있습니다.
+						*/
+					</textarea>
 				</div>
+
 				<figure class="img_figure mt_m">
 					<figcaption class="mt_0 t_black font-16">[unicode-range 속성 적용 예]</figcaption>
 					<img src="/ukncs/images/css/cssMiddleclass/uxkm_webfont_unicode-range.svg" alt="html 요소 설명" class="mt_m">
@@ -269,8 +341,14 @@
 				<p class="mt_s">
 					CSS의 font-display 속성을 사용하면 외부 라이브러리를 사용하지 않아도 웹 폰트의 로딩 상태에 따른 동작을 설정할 수 있습니다.<br>
 					현재 IE는 지원하지 않습니다.<br>
-					<code>font-display : auto | block | swap | fallback | optional</code>
 				</p>
+				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-display]">
+					<textarea readonly="readonly">
+						@font-face {
+							font-display : auto | block | swap | fallback | optional;
+						}
+					</textarea>
+				</div>
 				<div class="ol_lst indent mt_ms">
 					<ol>
 						<li class="line_code font14">
@@ -402,7 +480,7 @@
 
 		<section class="view_editor edit_code mt_l" data-target="css/step02/3.8.font-face/3.8.font-face.html">
 			<h3 class="ve_tit">font-face 예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
